cars/api-routing/nginx/deploy/kustomize/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx-proxy
  labels:
    app: nginx-proxy
spec:
  to:
    kind: Service
    name: nginx-proxy
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
